# DentalSystem

./: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build-windows.yml  release.yml
.kiro/specs/DS-001: sistema-dental-consultorio/: design.md  tasks.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/keys/: updater.key.pub
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: appointments.rs  auth.rs  backup.rs  billing.rs  clinical_history.rs  consents.rs  doctors.rs  documents.rs  mod.rs  odontogram.rs  patients.rs  procedures.rs  trial.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: mod.rs  v001_initial_schema.sql  v002_seed_admin.sql  v003_patients.sql  v004_doctors.sql  v005_procedures.sql  v006_appointments.sql  v007_odontograms.sql  v008_clinical_history.sql  v009_documents.sql  v010_consents.sql  v011_consent_templates.sql  v012_billing.sql
src-tauri/src/db/repositories/: appointment_repo.rs  billing_repo.rs  clinical_history_repo.rs  consent_repo.rs  doctor_repo.rs  document_repo.rs  mod.rs  odontogram_repo.rs  patient_repo.rs  procedure_repo.rs
src-tauri/src/models/: appointment.rs  billing.rs  clinical_history.rs  consent.rs  doctor.rs  document.rs  mod.rs  odontogram.rs  patient.rs  procedure.rs  user.rs
src-tauri/src/services/: auth_service.rs  backup_service.rs  file_manager.rs  mod.rs  pdf_generator.rs  session.rs
src/features/billing/: types.ts
src/store/: auth-store.ts
src/styles/: globals.css
(+79 files in other folders)
