[package]
name = "dental-system"
version = "0.1.0"
description = "Sistema de gestión para consultorio odontológico"
authors = ["jose.paez"]
edition = "2021"

[lib]
name = "dental_system_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
argon2 = "0.5"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
printpdf = "0.7"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
